# lab2_system_prog

./: calculator.cpp
lab4/: CMakeLists.txt  Makefile  calculator.cpp  calculator.h  complex_calculator.cpp  main.cpp
patches/: 0001-fix-truncation-error.patch  0002-formatting-use-tabs-instead-of-spaces.patch
